Fix column alignment

--- a/client/src/main/styles/components/_home.scss
+++ b/client/src/main/styles/components/_home.scss
@@ -10,7 +10,7 @@
     padding-right: 8px;
   }
   @media screen and (min-width: 768px) {
-    width: $column-width;
+    width: $column-width - 32px;
   }
 }
 
